schema/testdata/errors/environment_variables.keel
model MyModel {
    @permission(
        //expect-error:28:29:AttributeExpressionError:field 'FOO' does not exist
        expression: ctx.env.FOO == "d",
        actions: [get]
    )
}
